# Technical-Assessments

./: .gitignore  README.md  remove_git.sh
C#-PumpkinIO-API/: Dockerfile  PumpkinIO.csproj  PumpkinIO.sln  README.md  WeatherForecast.cs
Django-Excel-Upload-ChartJS-App/: requirements.txt
Django-Excel_Upload-ChartJS-App/: README.md  manage.py  requirements.txt  requirements_dev.txt
EC20-Page/: README.md  package-lock.json  package.json
Flask-Currency-Conversion-Task/: .env_example  .gitignore  README.rst  app.py  models.py  requirements.txt
Inventory-Management-System/: .env.example
Java-Bond-Calculator/: .project  README.md
Loan-App/: Makefile  README-task.md  README.md
NLP-Django-Sentiment-Analysis/: .gitignore  .pylintrc  Makefile  Pipfile  README.md  docker-compose-debug.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini
Open-Cities-Lab-Tech-Challenge/: .env.example  Pipfile  README.md  docker-compose.yml  setup.cfg
Peanut-Butter-Payroll-Backend/: .env.example  Jenkinsfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml
Peanut-Butter-Payroll-Frontend/: Jenkinsfile  README.md  jest.setup.js  next.config.ts  package-lock.json  package.json  tsconfig.json
Python-Black-Jack-Game/: README.md  (+2 more)
business_seconds/: .env.example  Dockerfile  OPENAPI_FIX_SUMMARY.md  README.md  deploy.sh  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
business_seconds/business_seconds_api/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
business_seconds/calculator/: services.py  test_services.py  test_views.py  urls.py  views.py
(+348 files in other folders)
